Did work on lots of signals, moved
fixed dummy data generation

gotta implement fix aliases for single items

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "runserver"
             ],
             "django": true,
-            "justMyCode": false
+            "justMyCode": true
         },
         {
             "name": "Run job queue",
@@ -24,7 +24,7 @@
                 "qcluster"
             ],
             "django": true,
-            "justMyCode": false,
+            "justMyCode": true,
             "gevent": true
         },
         {
