Finished changes to automatic downloading.
TODO, testing, adding as parent class to all serialisers in api

TODO, synching (much simpler) alias tables.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,18 @@
             "justMyCode": true
         },
         {
+            "name": "Run server no reload",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}\\src\\manage.py",
+            "args": [
+                "runserver",
+                "--noreload",
+            ],
+            "django": true,
+            "justMyCode": false
+        },
+        {
             "name": "Make migration",
             "type": "python",
             "request": "launch",
