--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,11 @@
             "request": "launch",
             "program": "${workspaceFolder}\\src\\manage.py",
             "args": [
-                "runserver"
+                "runbackend",
+                "--nojobqueing"
             ],
             "django": true,
-            "justMyCode": true
+            "justMyCode": false
         },
         {
             "name": "Run job queue",
