Fixed bugs in simple peering code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,10 +22,11 @@
             "program": "${workspaceFolder}\\src\\manage.py",
             "args": [
                 "runbackend",
-                "--nojobqueing"
+                "--nojobqueing",
+                "--noreload"
             ],
             "django": true,
-            "justMyCode": false
+            "justMyCode": true
         },
         {
             "name": "Run server synchronously remote",
